# computational-graph-engine

./: .gitignore  CMakeLists.txt  README.md
include/cg/: concepts.hpp  dual.hpp  expression.hpp  graph.hpp  node.hpp  node_id.hpp  ops.hpp
include/cg/eval/: evaluator.hpp  policies.hpp
include/cg/opt/: constant_folding.hpp  pass.hpp
include/cg/viz/: dot.hpp  visualizer.hpp
include/cg/viz_output/: graph.dot
src/: main.cpp
tests/: test_basic.cpp
